tests/fixtures/invalid/max_list_bool.py
# Cannot call max() with List[int], Bool
x = max([1, 2, 3], True)
